Implement GaussianProcessFitterResult class
This class enables to store a result of a gaussian process fitter
(fitting a gaussian process by maximizing the log-likelihood wrt data,
covariance model, trend parameters...

We store all elements that will be reusable for conditioning, optimal
parameters...

--- a/python/src/CMakeLists.txt
+++ b/python/src/CMakeLists.txt
@@ -1031,6 +1031,7 @@ ot_add_python_module(experimental experimental_module.i
                      RankSobolSensitivityAlgorithm.i RankSobolSensitivityAlgorithm_doc.i.in
                      CubaIntegration.i CubaIntegration_doc.i.in
                      ExperimentIntegration.i ExperimentIntegration_doc.i.in
+                     GaussianProcessFitterResult.i GaussianProcessFitterResult_doc.i.in
                     )
 set (OPENTURNS_PYTHON_MODULES ${OPENTURNS_PYTHON_MODULES} PARENT_SCOPE) # for the docstring test
 
