--- a/lib/src/Uncertainty/Algorithm/MetaModel/Kriging/CMakeLists.txt
+++ b/lib/src/Uncertainty/Algorithm/MetaModel/Kriging/CMakeLists.txt
@@ -10,6 +10,7 @@ ot_add_source_file (KrigingAlgorithm.cxx)
 ot_add_source_file (KrigingResult.cxx)
 ot_add_source_file (GeneralLinearModelResult.cxx)
 ot_add_source_file (GeneralLinearModelAlgorithm.cxx)
+ot_add_source_file (GaussianProcessFitterResult.cxx)
 
 
 ot_install_header_file (KrigingEvaluation.hxx)
@@ -18,5 +19,6 @@ ot_install_header_file (KrigingAlgorithm.hxx)
 ot_install_header_file (KrigingResult.hxx)
 ot_install_header_file (GeneralLinearModelResult.hxx)
 ot_install_header_file (GeneralLinearModelAlgorithm.hxx)
+ot_install_header_file (GaussianProcessFitterResult.hxx)
 
 ot_install_header_file (OTKriging.hxx)
