--- a/lib/test/CMakeLists.txt
+++ b/lib/test/CMakeLists.txt
@@ -642,6 +642,7 @@ ot_check_test (KrigingAlgorithm_nuggetFactor IGNOREOUT)
 ot_check_test (KrigingRandomVector_std)
 ot_check_test (MetaModelValidation_std)
 ot_check_test (GeneralLinearModelAlgorithm_std IGNOREOUT)
+ot_check_test (GaussianProcessFitter_std IGNOREOUT)
 ot_check_test (LinearModelAlgorithm_std)
 ot_check_test (LinearModelAnalysis_std)
 ot_check_test (LinearModelValidation_std IGNOREOUT)
@@ -651,10 +652,12 @@ ot_check_test (OrthogonalProductPolynomialFactory_std)
 if (HMAT_FOUND)
 ot_check_test (KrigingAlgorithm_std_hmat)
 ot_check_test (GeneralLinearModelAlgorithm_std_hmat)
+ot_check_test (GaussianProcessFitter_std_hmat IGNOREOUT)
 endif ()
 
 if (NLopt_FOUND)
 ot_check_test (GeneralLinearModelAlgorithm_nlopt)
+ot_check_test (GaussianProcessFitter_nlopt IGNOREOUT)
 endif ()
 
 # Sensitivity
