--- a/python/src/CMakeLists.txt
+++ b/python/src/CMakeLists.txt
@@ -1032,6 +1032,7 @@ ot_add_python_module(experimental experimental_module.i
                      CubaIntegration.i CubaIntegration_doc.i.in
                      ExperimentIntegration.i ExperimentIntegration_doc.i.in
                      GaussianProcessFitterResult.i GaussianProcessFitterResult_doc.i.in
+                     GaussianProcessFitter.i GaussianProcessFitter_doc.i.in
                     )
 set (OPENTURNS_PYTHON_MODULES ${OPENTURNS_PYTHON_MODULES} PARENT_SCOPE) # for the docstring test
 
