--- a/python/src/CMakeLists.txt
+++ b/python/src/CMakeLists.txt
@@ -1033,6 +1033,7 @@ ot_add_python_module(experimental experimental_module.i
                      ExperimentIntegration.i ExperimentIntegration_doc.i.in
                      GaussianProcessFitterResult.i GaussianProcessFitterResult_doc.i.in
                      GaussianProcessFitter.i GaussianProcessFitter_doc.i.in
+                     GaussianProcessRegressionResult.i GaussianProcessRegressionResult_doc.i.in
                     )
 set (OPENTURNS_PYTHON_MODULES ${OPENTURNS_PYTHON_MODULES} PARENT_SCOPE) # for the docstring test
 
