--- a/lib/test/CMakeLists.txt
+++ b/lib/test/CMakeLists.txt
@@ -643,6 +643,7 @@ ot_check_test (KrigingRandomVector_std)
 ot_check_test (MetaModelValidation_std)
 ot_check_test (GeneralLinearModelAlgorithm_std IGNOREOUT)
 ot_check_test (GaussianProcessFitter_std IGNOREOUT)
+ot_check_test (GaussianProcessRegression_std IGNOREOUT)
 ot_check_test (LinearModelAlgorithm_std)
 ot_check_test (LinearModelAnalysis_std)
 ot_check_test (LinearModelValidation_std IGNOREOUT)
@@ -653,11 +654,13 @@ if (HMAT_FOUND)
 ot_check_test (KrigingAlgorithm_std_hmat)
 ot_check_test (GeneralLinearModelAlgorithm_std_hmat)
 ot_check_test (GaussianProcessFitter_std_hmat IGNOREOUT)
+ot_check_test (GaussianProcessRegression_std_hmat IGNOREOUT)
 endif ()
 
 if (NLopt_FOUND)
 ot_check_test (GeneralLinearModelAlgorithm_nlopt)
 ot_check_test (GaussianProcessFitter_nlopt IGNOREOUT)
+ot_check_test (GaussianProcessRegression_nlopt IGNOREOUT)
 endif ()
 
 # Sensitivity
