GPDFactory: Add MLE

--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -869,6 +869,7 @@ if (MATPLOTLIB_FOUND)
     set_tests_properties (pyinstallcheck_example_plot_estimate_dependence_wavesurge PROPERTIES DISABLED TRUE)
     set_tests_properties (pyinstallcheck_example_plot_estimate_dependence_wind PROPERTIES DISABLED TRUE)
     set_tests_properties (pyinstallcheck_example_plot_import_export_sample_csv PROPERTIES DISABLED TRUE)
+    set_tests_properties (pyinstallcheck_example_plot_estimate_gpd_rain PROPERTIES DISABLED TRUE)
   endif ()
   if (Python_VERSION VERSION_LESS 3.8)
     set_tests_properties (pyinstallcheck_example_plot_enumeratefunction PROPERTIES DISABLED TRUE)
