--- a/python/src/KPermutations_doc.i.in
+++ b/python/src/KPermutations_doc.i.in
@@ -17,7 +17,7 @@ n : integer
 
 See also
 --------
-CombinatorialGenerator, Combinations, Tuples
+KPermutationsDistribution, CombinatorialGenerator, Combinations, Tuples
 
 Notes
 -----
