--- a/lib/src/Uncertainty/Algorithm/MetaModel/FunctionalChaos/CMakeLists.txt
+++ b/lib/src/Uncertainty/Algorithm/MetaModel/FunctionalChaos/CMakeLists.txt
@@ -19,6 +19,7 @@ ot_add_source_file (CleaningStrategy.cxx)
 ot_add_source_file (FieldToPointFunctionalChaosAlgorithm.cxx)
 ot_add_source_file (FieldFunctionalChaosResult.cxx)
 ot_add_source_file (FieldFunctionalChaosSobolIndices.cxx)
+ot_add_source_file (PointToFieldFunctionalChaosAlgorithm.cxx)
 
 ot_install_header_file (IntegrationStrategy.hxx)
 ot_install_header_file (FixedStrategy.hxx)
@@ -37,3 +38,4 @@ ot_install_header_file (AdaptiveStrategy.hxx)
 ot_install_header_file (FieldToPointFunctionalChaosAlgorithm.hxx)
 ot_install_header_file (FieldFunctionalChaosResult.hxx)
 ot_install_header_file (FieldFunctionalChaosSobolIndices.hxx)
+ot_install_header_file (PointToFieldFunctionalChaosAlgorithm.hxx)
