--- a/lib/etc/openturns.conf.in
+++ b/lib/etc/openturns.conf.in
@@ -121,6 +121,10 @@
   <FieldToPointFunctionalChaosAlgorithm-DefaultRecompress value_bool="false" />
   <FieldToPointFunctionalChaosAlgorithm-CopulaType value_str="Normal" />
 
+  <!-- OT:: PointToFieldFunctionalChaosAlgorithm parameters -->
+  <PointToFieldFunctionalChaosAlgorithm-DefaultRecompress value_bool="false" />
+  <PointToFieldFunctionalChaosAlgorithm-Expansion value_str="LeastSquaresExpansion" />
+
   <!-- OT::SQP parameters -->
   <SQP-DefaultOmega                   value_float="1.0e-4"           />
   <SQP-DefaultSmooth                  value_float="1.2"              />
