--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -764,6 +764,7 @@ ot_pyinstallcheck_test (LinearModelStepwiseAlgorithm_std)
 ot_pyinstallcheck_test (KrigingAlgorithm_isotropic_std IGNOREOUT)
 ot_pyinstallcheck_test (FieldToPointFunctionalChaosAlgorithm_std IGNOREOUT)
 ot_pyinstallcheck_test (FieldFunctionalChaosSobolIndices_std IGNOREOUT)
+ot_pyinstallcheck_test (PointToFieldFunctionalChaosAlgorithm_std IGNOREOUT)
 
 ## Sensitivity
 ot_pyinstallcheck_test (ANCOVA_std)
