--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -860,6 +860,7 @@ if (MATPLOTLIB_FOUND)
   endif ()
   if (NOT PANDAS_FOUND)
     set_tests_properties (pyinstallcheck_example_plot_sample_pandas PROPERTIES DISABLED TRUE)
+    set_tests_properties (pyinstallcheck_example_plot_estimate_gpd_wooster PROPERTIES DISABLED TRUE)
   endif ()
   if (NOT BISON_FOUND OR NOT FLEX_FOUND)
     set_tests_properties (pyinstallcheck_example_plot_import_export_sample_csv PROPERTIES DISABLED TRUE)
@@ -867,6 +868,8 @@ if (MATPLOTLIB_FOUND)
     set_tests_properties (pyinstallcheck_example_plot_estimate_gev_pirie PROPERTIES DISABLED TRUE)
     set_tests_properties (pyinstallcheck_example_plot_estimate_gev_racetime PROPERTIES DISABLED TRUE)
     set_tests_properties (pyinstallcheck_example_plot_estimate_gev_venice PROPERTIES DISABLED TRUE)
+    set_tests_properties (pyinstallcheck_example_plot_estimate_gpd_rain PROPERTIES DISABLED TRUE)
+    set_tests_properties (pyinstallcheck_example_plot_estimate_gpd_dowjones PROPERTIES DISABLED TRUE)
     set_tests_properties (pyinstallcheck_example_plot_estimate_dependence_wavesurge PROPERTIES DISABLED TRUE)
     set_tests_properties (pyinstallcheck_example_plot_estimate_dependence_wind PROPERTIES DISABLED TRUE)
     set_tests_properties (pyinstallcheck_example_plot_import_export_sample_csv PROPERTIES DISABLED TRUE)
