--- a/python/src/GeneralizedParetoFactory_doc.i.in
+++ b/python/src/GeneralizedParetoFactory_doc.i.in
@@ -715,41 +715,46 @@ result : :class:`~openturns.TimeVaryingResult`
 %feature("docstring") OT::GeneralizedParetoFactory::buildReturnLevelEstimator
 "Estimate a return level and its distribution from the GPD parameters.
 
-The :math:`m`-return level :math:`x_m` is the level exceeded on average once every :math:`m` blocks.
-The parameter :math:`m` is referred to as the *return period*.
-For example, if the GPD distribution is the distribution of the annual maxima,
-then :math:`x_{100}` is the 100-year return period and is exceeded on average once in every century.
+The :math:`m`-observation return level :math:`x_m` is the level exceeded on
+average once every :math:`m` observations.
+The :math:`m`-observation return level can be translated on the annual-scale: if there
+are :math:`n_y` observations per year, then the :math:`N`-year return level
+corresponds to the :math:`m`-observation return level where :math:`m = n_yN`.
 
-The :math:`m`-return level is defined as the quantile of order :math:`1-p=1-1/m` of the GPD distribution.
-
+The :math:`m`-observation return level is defined as the quantile as :math:`1-1/m`
+of the observation distribution :math:`X` which is built from the GPD and the
+probability to exceed :math:`u`.
 
 If :math:`\xi \neq 0`:
 
 .. math::
     :label: xm1
 
-    x_m = u + \frac{\sigma}{\xi}\left[(m \zeta_u)^{\xi} - 1 \right]
+    z_m = u + \frac{\sigma}{\xi}\left[(m \zeta_u \theta)^{\xi} - 1 \right]
 
 If :math:`\xi = 0`:
 
 .. math::
     :label: xm2
 
-    x_m = u + \sigma \log(m \zeta_u)
+    z_m = u + \sigma \log(m \zeta_u \theta)
 
-with :math:`zeta_u` the ratio of samples exceeding the threshold :math:`u`.
+with :math:`\zeta_u` the sample proportion of points exceeding the threshold :math:`u` and :math:`\theta` the extremal index, estimated by the proportion
+of clusters within the points exceeding the threshold. Hence, :math:`\zeta_u\theta`
+is the proportion of clusters in the sample.
 
-The estimator :math:`\hat{x}_m` of :math:`x_m` is deduced from the estimator
-:math:`(\hat{\sigma}, \hat{\xi}, \hat{\zeta_u})` of :math:`(\sigma, \xi, \zeta_u)`.
+The estimator :math:`\hat{z}_m` of :math:`z_m` is deduced from the estimator
+:math:`(\hat{\sigma}, \hat{\xi}, \hat{\zeta_u})` of :math:`(\sigma, \xi, \zeta_u)`
+of the GPD.
 
-The asymptotic distribution of :math:`\hat{x_m}` is obtained by the Delta method from the asymptotic distribution of
-:math:`(\hat{\sigma}, \hat{\xi}, \hat{\zeta_u})`. It is a normal distribution with mean :math:`\hat{x}_m` and variance:
+The asymptotic distribution of :math:`\hat{z}_m` is obtained by the Delta method from the asymptotic distribution of
+:math:`(\hat{\sigma}, \hat{\xi}, \hat{\zeta}_u)`. It is a normal distribution with mean :math:`\hat{z}_m` and variance:
 
 .. math::
 
-    \Var{z_m} = (\nabla x_m)^T \mat{V}_n \nabla x_m
+    \Var{\hat{z}_m} = (\nabla z_m)^T \mat{V}_n \nabla z_m
 
-where :math:`\nabla x_m = (\frac{\partial x_m}{\partial \mu}, \frac{\partial x_m}{\partial \sigma}, \frac{\partial x_m}{\partial \xi})`
+where :math:`\nabla z_m = (\frac{\partial z_m}{\partial \mu}, \frac{\partial z_m}{\partial \sigma}, \frac{\partial z_m}{\partial \xi})`
 and :math:`\mat{V}_n` is the asymptotic covariance of :math:`(\hat{\sigma}, \hat{\xi}, \hat{\mu})`.
 
 Parameters
@@ -757,14 +762,14 @@ Parameters
 result : :class:`~openturns.DistributionFactoryResult`
     Likelihood estimation result of a :class:`~openturns.GeneralizedPareto`
 m : float
-    The return period expressed in terms of number of blocks.
+    The return period expressed in terms of number of observations.
 sample : 2-d sequence of float
     The same sample used for the likelihood estimation (to compute :math:`\zeta_u`).
 
 Returns
 -------
 distribution : :class:`~openturns.Distribution`
-    The asymptotic distribution of :math:`\hat{x}_m`."
+    The asymptotic distribution of :math:`\hat{z}_m`."
 
 
 // ----------------------------------------------------------------------------
@@ -797,7 +802,7 @@ Parameters
 sample : 2-d sequence of float
     A sample of dimension 1.
 m : float
-    The return period, defines the level of the quantile as :math:`1-1/m`.
+    The :math:`m`-observation return period.
 u : float
     The location parameter
 
@@ -843,45 +848,3 @@ distribution : :class:`~openturns.Normal`
 Notes
 -----
 The starting point of the optimization is initialized from the regular maximum likelihood method."
-
-// ----------------------------------------------------------------------------
-
-%feature("docstring") OT::GeneralizedParetoFactory::getPeakOverThresholdWithClusters
-"Compute extreme values using Peaks Over Threshold (POT) method.
-
-Parameters
-----------
-sample : 2-d sequence of float
-    A sample of dimension 1.
-threshold : float
-    The threshold value
-r : int
-    Minimum number of consecutive values below the threshold between clusters
-
-Returns
--------
-peaks : :class:`~openturns.Sample`
-    The peaks for each cluster
-clusters : collection :class:`~openturns.Indices`
-    List of pairs of begin/end indices of each cluster.
-"
-
-// ----------------------------------------------------------------------------
-
-%feature("docstring") OT::GeneralizedParetoFactory::getPeakOverThreshold
-"Compute extreme values using Peaks Over Threshold (POT) method.
-
-Parameters
-----------
-sample : 2-d sequence of float
-    A sample of dimension 1.
-threshold : float
-    The threshold value
-r : int
-    Minimum number of consecutive values below the threshold between clusters
-
-Returns
--------
-peaks : :class:`~openturns.Sample`
-    The peaks for each cluster
-"
