--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ option (USE_PRIMESIEVE               "Use primesieve for prime numbers generatio
 option (USE_OPENMP                   "Use OpenMP to disable threading"                                       ON)
 option (USE_OPENBLAS                 "Use OpenBLAS to disable threading"                                     ON)
 option (USE_CXX17                    "Use C++17 standard"                                                    ON)
+option (USE_NANOFLANN                "Use nanoflann for Nearest Neighbor search"                             ON)
 
 option (BUILD_PYTHON                 "Build the python module for the library"                               ON)
 option (BUILD_SHARED_LIBS            "Build shared libraries"                                                ON)
@@ -388,6 +389,16 @@ if (USE_OPENMP)
   if (OPENMP_FOUND)
     set (OPENTURNS_HAVE_OPENMP TRUE)
     list (APPEND OPENTURNS_PRIVATE_LIBRARIES OpenMP::OpenMP_CXX)
+  endif ()
+endif ()
+
+if (USE_NANOFLANN)
+  find_package (nanoflann CONFIG)
+  if (nanoflann_FOUND)
+    message (STATUS "Found nanoflann: ${nanoflann_DIR} (found version \"${nanoflann_VERSION}\")")
+    set (OPENTURNS_HAVE_NANOFLANN TRUE)
+    list (APPEND OPENTURNS_PRIVATE_LIBRARIES nanoflann::nanoflann)
+    list (APPEND OPENTURNS_ENABLED_FEATURES "nanoflann")
   endif ()
 endif ()
 
