--- a/lib/src/CMakeLists.txt
+++ b/lib/src/CMakeLists.txt
@@ -57,6 +57,10 @@ if (HMAT_FOUND)
   set_source_files_properties (Base/Stat/HMatrixFactory.cxx Base/Stat/HMatrixImplementation.cxx PROPERTIES SKIP_UNITY_BUILD_INCLUSION ON)
 endif ()
 
+if (nanoflann_FOUND)
+  set_source_files_properties (Base/Algo/KDTree.cxx PROPERTIES SKIP_UNITY_BUILD_INCLUSION ON)
+endif ()
+
 # SymbolicParserExprTk.cxx includes exprtk.hpp which is huge, exclude it from unity builds
 # It also causes problems on Windows
 if (OPENTURNS_HAVE_EXPRTK)
