--- a/python/src/KDTree_doc.i.in
+++ b/python/src/KDTree_doc.i.in
@@ -3,9 +3,6 @@
 
 Allows one to store and search points fast.
 
-Available constructors:
-    KDTree(*sample*)
-
 Parameters
 ----------
 sample : 2-d sequence of float
@@ -14,6 +11,14 @@ sample : 2-d sequence of float
 See also
 --------
 NearestNeighbourAlgorithm
+
+Notes
+-----
+When nanoflann support is enabled, the :class:`~openturns.ResourceMap` key `KDTree-leaf_max_size`
+allows one to set the tree leaf size which involves a build vs query tradeoff: large values
+will tend to result in fast build and slow queries, and small values typically result in slow build and fast queries.
+Also when nanoflann version is at least v1.5.0, the :class:`~openturns.ResourceMap` key `KDTree-n_thread_build`
+allows one to set the number of threads used during the tree building phase. It is also decided by OPENTURNS_NUM_THREADS.
 
 Examples
 --------
