--- a/python/doc/conf.py.in
+++ b/python/doc/conf.py.in
@@ -359,3 +359,6 @@ texinfo_documents = [
 
 # If true, do not generate a @detailmenu in the "Top" node's menu.
 #texinfo_no_detailmenu = False
+
+# If true, Sphinx will warn about all references where the target cannot be found.
+nitpicky = True
