--- a/python/src/FunctionalChaosAlgorithm_doc.i.in
+++ b/python/src/FunctionalChaosAlgorithm_doc.i.in
@@ -105,7 +105,7 @@ The univariate bases may be:
   For more details, see :class:`~openturns.StandardDistributionPolynomialFactory`;
 
 - Haar wavelets: they enable to approximate functions with discontinuities.
-  For more details, see :class:`~openturns.HaarWaveletFactory`,;
+  For more details, see :class:`~openturns.HaarWaveletFactory`;
 
 - Fourier series: for more details, see :class:`~openturns.FourierSeriesFactory`.
 
