--- a/python/src/Contour_doc.i.in
+++ b/python/src/Contour_doc.i.in
@@ -2,9 +2,12 @@
 "Contour.
 
 Available constructors:
-    Contour(*dimX, dimY, data, legend=' '*)
+
+    Contour(*dimX, dimY, data, isFilled=True, colorMap='viridis'*)
 
     Contour(*sampleX, sampleY, data, levels, labels, drawLabels=True, legend=' '*)
+
+    Contour(*sampleX, sampleY, data, isFilled=True, colorMap='viridis'*)
 
 Parameters
 ----------
@@ -29,6 +32,10 @@ drawLabels : bool
     Flag telling if the labels of the iso-curves must be explicited or not.
 legend : str
     Legend of the Contour.
+isFilled : bool
+    Flag telling if the contour must be filled or not.
+colorMap : str
+    Name of the color map used to color the contour
 
 Examples
 --------
@@ -46,7 +53,7 @@ Using the first constructor:
 >>> data = f(inputData)
 >>> levels = [(0.5 + i) / 5 for i in range(5)]
 >>> # Create an empty graph
->>> myGraph = ot.Graph('Complex iso lines', 'u1', 'u2', True, '')
+>>> myGraph = ot.Graph('Complex iso lines', 'u1', 'u2', True)
 >>> # Create the contour
 >>> myContour = ot.Contour(nX + 2, nY + 2, data)
 >>> myContour.setLevels(levels)
@@ -104,3 +111,312 @@ at orders :math:`q_k` regularly distributed over :math:`]0,1[`:
 :math:`q_k = \frac{1}{n} \left( k+ \frac{1}{2} \right)` for
 :math:`0 \leq k \leq n-1`.
 "
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::Contour::isFilled
+"Accessor to the isFilled flag of the Contour element.
+
+Returns
+-------
+isFilled : bool
+    True if the iso-curves must be filled.
+
+Examples
+--------
+>>> import openturns as ot
+>>> print(ot.Contour(2,2,ot.Sample(4,1),True).isFilled())
+True
+
+See Also
+--------
+setIsFilled"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::Contour::setIsFilled
+"Accessor to the flag isFilled of the Contour element.
+
+Parameters
+----------
+isFilled : bool
+    True if the iso-curves must be filled.
+
+See Also
+--------
+isFilled"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::Contour::getColorBarPosition
+"Accessor to the color position inside the graph containing the Contour element.
+
+Returns
+-------
+colorBarPosition : str
+    The name of the color bar position or '' if the color bar should not be displayed.
+
+Examples
+--------
+>>> import openturns as ot
+>>> contour = ot.Contour(2,2,ot.Sample(4,1),True)
+>>> contour.setColorBarPosition('right')
+>>> print(contour.getColorBarPosition())
+right
+
+See Also
+--------
+setColorBarPosition"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::Contour::setColorBarPosition
+"Accessor to the color position inside the graph containing the Contour element.
+
+Parameters
+----------
+colorBarPosition : str
+    The name of the color bar position or '' if the color bar should not be displayed.
+
+See Also
+--------
+getColorBarPosition"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::Contour::getColorMap
+"Accessor to the color map name of the Contour element.
+
+Returns
+-------
+colorMap : str
+    The name of the color map used to color the Contour element.
+
+Examples
+--------
+>>> import openturns as ot
+>>> print(ot.Contour(2,2,ot.Sample(4,1)).getColorMap())
+viridis
+
+See Also
+--------
+setColorMap, GetValidColorMaps"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::Contour::setColorMap
+"Accessor to the name of the color map used to color the Contour element.
+
+Parameters
+----------
+colorMap : str
+    The name of the color map used to color the Contour element. Use :meth:`GetValidColorMaps`
+    for a list of available values.
+
+See Also
+--------
+getColorMap, GetValidColorMaps"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::Contour::getAlpha
+"Accessor to the alpha blending value of the Contour element.
+
+Returns
+-------
+alpha : float
+    The alpha blending value of the Contour element, between 0 (transparent) and 1 (opaque).
+
+Examples
+--------
+>>> import openturns as ot
+>>> print(ot.Contour(2,2,ot.Sample(4,1)).getAlpha())
+1.0
+
+See Also
+--------
+setAlpha"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::Contour::setAlpha
+"Accessor to the alpha blending value of the Contour element.
+
+Parameters
+----------
+alpha : float
+    The alpha blending value of the Contour element, between 0 (transparent) and 1 (opaque).
+
+See Also
+--------
+getAlpha"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::Contour::getVmin
+"Accessor to the vmin value of the Contour element.
+
+Returns
+-------
+alpha : float
+    The vmin value of the Contour element.
+
+Examples
+--------
+>>> import openturns as ot
+>>> contour = ot.Contour(2,2,ot.Sample(4,1))
+>>> contour.setVmin(5.0)
+>>> print(contour.getVmin())
+5.0
+
+See Also
+--------
+setVmin"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::Contour::setVmin
+"Accessor to the vmin value of the Contour element.
+
+Parameters
+----------
+alpha : float
+    The vmin value of the Contour element.
+
+See Also
+--------
+getVmin"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::Contour::getVmax
+"Accessor to the vmax value of the Contour element.
+
+Returns
+-------
+alpha : float
+    The vmax value of the Contour element.
+
+Examples
+--------
+>>> import openturns as ot
+>>> contour = ot.Contour(2,2,ot.Sample(4,1))
+>>> contour.setVmax(5.0)
+>>> print(contour.getVmax())
+5.0
+
+See Also
+--------
+setVmax"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::Contour::setVmax
+"Accessor to the vmax value of the Contour element.
+
+Parameters
+----------
+alpha : float
+    The vmax value of the Contour element.
+
+See Also
+--------
+getVmax"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::Contour::getNorm
+"Accessor to the normalization method of the Contour element.
+
+Returns
+-------
+norm : str
+    The name of the normalization method used to scale scalar data to the [0, 1] range before
+    mapping to colors using the color map.
+
+Examples
+--------
+>>> import openturns as ot
+>>> print(ot.Contour(2,2,ot.Sample(4,1)).getNorm())
+linear
+
+See Also
+--------
+setNorm, GetValidNorms"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::Contour::setNorm
+"Accessor to the normalization method of the Contour element.
+
+Parameters
+----------
+norm : str
+    The name of the normalization method used to scale scalar data to the [0, 1] range before
+    mapping to colors using the color map. Use :meth:`GetValidNorms` for a list of
+    available values.
+
+See Also
+--------
+getNorm, GetValidNorms"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::Contour::getExtend
+"Accessor to the filling mode of values that are outside the levels range of the Contour element.
+
+Returns
+-------
+norm : str
+    Determines the color filling of values that are outside the levels range.
+    If 'neither', values outside the levels range are not colored. If 'min',
+    'max' or 'both', color the values below, above or below and above the levels range.
+
+Examples
+--------
+>>> import openturns as ot
+>>> print(ot.Contour(2,2,ot.Sample(4,1)).getExtend())
+both
+
+See Also
+--------
+setExtend, GetValidExtends"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::Contour::setExtend
+"Accessor to the filling mode of values that are outside the levels range of the Contour element.
+
+Parameters
+----------
+norm : str
+    Determines the color filling of values that are outside the levels range.
+    If 'neither', values outside the levels range are not colored. If 'min',
+    'max' or 'both', color the values below, above or below and above the levels range.
+    Use :meth:`GetValidExtends` for a list of available values.
+
+See Also
+--------
+getExtend, GetValidExtends"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::Contour::getHatches
+"Accessor to the hatches used for filling the contour element.
+
+Returns
+-------
+hatches : :class:`~openturns.Description`
+    A list of cross hatch patterns to use on the filled areas.
+    Hatches can use folowing characters : /\|-+xoO.*"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::Contour::setHatches
+"Accessor to the hatches used for filling the contour element.
+
+Parameters
+----------
+hatches : sequence of str
+    A list of cross hatch patterns to use on the filled areas.
+    Hatches can use folowing characters : /\|-+xoO.*"
