--- a/python/src/LinearModelValidation_doc.i.in
+++ b/python/src/LinearModelValidation_doc.i.in
@@ -43,7 +43,7 @@ cross-validation methods can be used.
 If model selection is involved, the naive methods based on the
 :class:`~openturns.LeaveOneOutSplitter` and :class:`~openturns.KFoldSplitter`
 classes can be used directly, but this can be much slower than the
-analytical methods implemented in the :class:`~openturns.LinearModelValidation`
+analytical methods implemented in the :class:`~openturns.experimental.LinearModelValidation`
 class.
 In many cases, however, the order of magnitude of the estimate from the
 analytical formula applied to a sparse model is correct: the estimate of
@@ -64,8 +64,8 @@ the :math:`i`-th prediction is the prediction of the linear model
 trained using the hold-out sample where the :math:`i`-th observation
 was removed.
 This produces a sample of residuals which can be retrieved using
-the :class:`~openturns.LinearModelValidation.getResidualSample` method.
-The :class:`~openturns.LinearModelValidation.drawValidation` performs
+the :class:`~openturns.experimental.LinearModelValidation.getResidualSample` method.
+The :class:`~openturns.experimental.LinearModelValidation.drawValidation` performs
 similarly.
 
 Examples
@@ -73,6 +73,7 @@ Examples
 Create a linear model.
 
 >>> import openturns as ot
+>>> import openturns.experimental as otexp
 >>> func = ot.SymbolicFunction(
 ...     ['x1', 'x2', 'x3'],
 ...     ['x1 + x2 + sin(x2 * 2 * pi_) / 5 + 1e-3 * x3^2']
@@ -88,12 +89,12 @@ Create a linear model.
 
 Validate the linear model using leave-one-out cross-validation.
 
->>> validation = ot.LinearModelValidation(result)
+>>> validation = otexp.LinearModelValidation(result)
 
 We can use a specific cross-validation splitter if needed.
 
 >>> splitterLOO = ot.LeaveOneOutSplitter(sampleSize)
->>> validation = ot.LinearModelValidation(result, splitterLOO)
+>>> validation = otexp.LinearModelValidation(result, splitterLOO)
 >>> r2Score = validation.computeR2Score()
 >>> print('R2 = ', r2Score[0])
 R2 =  0.98...
@@ -101,13 +102,13 @@ R2 =  0.98...
 Validate the linear model using K-Fold cross-validation.
 
 >>> splitterKFold = ot.KFoldSplitter(sampleSize)
->>> validation = ot.LinearModelValidation(result, splitterKFold)
+>>> validation = otexp.LinearModelValidation(result, splitterKFold)
 
 Validate the linear model using K-Fold cross-validation and set K.
 
 >>> kFoldParameter = 10
 >>> splitterKFold = ot.KFoldSplitter(sampleSize, kFoldParameter)
->>> validation = ot.LinearModelValidation(result, splitterKFold)
+>>> validation = otexp.LinearModelValidation(result, splitterKFold)
 
 Draw the validation graph.
 
